--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
     "gulp-jade": "^1.0.0",
-    "gulp-jshint": "^1.10.0"
+    "gulp-jshint": "^1.10.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-requirejs": "^0.1.3"
   }
 }
